Fixed dark mode of beautified scrollbar

--- a/sass/components/_dark-mode.scss
+++ b/sass/components/_dark-mode.scss
@@ -1,3 +1,29 @@
+@mixin beautify-darkmode-scrollbar {
+    /* width */
+    &::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+    }
+    /* Track */
+    &::-webkit-scrollbar-track {
+        background: rgba(255, 255, 255, 0.03);
+        border-radius: 5px;
+    }
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+        background: rgba(255, 255, 255, 0.3);
+        border-radius: 5px;
+    }
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+        background: rgba(255, 255, 255, 0.5);
+    }
+    /* Corner */
+    &::-webkit-scrollbar-corner {
+        background: rgba(255, 255, 255, 0);
+    }
+}
+
 @mixin dark-mode {
     color: #FFF;
     //colors
@@ -1156,6 +1182,14 @@
                     background: rgba(255, 255, 255, 0.5);
                 }
             }
+        }
+    }
+    .scrollbar.force {
+        @include beautify-darkmode-scrollbar();
+    }
+    body.scrollbar.force {
+        * {
+            @include beautify-darkmode-scrollbar();
         }
     }
 }
